# hands-on-ml

./: .gitignore  README.md  environment.yml  pyproject.toml
chapter_2/: feature_engineering.py  input_data.py  main.py  test_set.py
hands_on_ml/chapter_2/: feature_engineering.py  input_data.py  main.py  preprocess.py  split.py
hands_on_ml/chapter_3/: main.py
hands_on_ml/chapter_3/notebooks/: exercise_1.ipynb  spam_classifier.ipynb
src/hands-on-ml/chapter-2/: input_data.py  main.py  test_set.py
src/hands_on_ml/chapter_2/: config.py  data_cleaning.py  evaluate.py  feature_engineering.py  fine_tuning.py  input_data.py  lib_io.py  main.py  preprocess.py  preprocessing.py  split.py  train.py  visualize.py
src/hands_on_ml/chapter_2/notebooks/: housing_prices.ipynb
src/hands_on_ml/chapter_3/: evaluate.py  input_data.py  main.py  train.py  visual.py
src/hands_on_ml/chapter_3/notebooks/: ex1_knn_clf.ipynb  exercise_1.ipynb  exercise_2.ipynb  five_classifier.ipynb  mnist.ipynb
