[tool.poetry]
name = "hands-on-ml"
version = "0.1.0"
description = ""
authors = ["Matheus Raposo <matheus_raposo@hotmail.com>"]
readme = "README.md"
packages = [{include = "hands_on_ml"}]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.2.2"
notebook = "^6.5.4"
jupyter = "^1.0.0"
pandas = "^2.0.1"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
